kubernetes/deegree3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deegree3-deployment
  labels:
    app: deegree3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deegree3
  template:
    metadata:
      labels:
        app: deegree3
    spec:
      containers:
      - name: deegree3
        image: "docker-dev/deegree3-test-k8s:0.1.4"
        ports:
          - containerPort: 8080
        volumeMounts:
        - mountPath: /var/lib/tomcat/.deegree
          name: deegree3-volume 
        lifecycle:
          postStart:
            exec:
              command: ['/bin/sh', '-c', 'sed -i "s/DB_USER/$DB_USER/" /var/lib/tomcat/.deegree/deegree_workspace_inspire/jdbc/db.xml; sed -i "s/DB_PASSWORD/$DB_PASSWORD/" /var/lib/tomcat/.deegree/deegree_workspace_inspire/jdbc/db.xml']
      volumes:
      - name: deegree3-volume
        emptyDir: {}
