kubernetes/deegree3-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: deegree3-pod
spec:
  securityContext:
    fsGroup: 999
  containers:
  - name: deegree3-container-1
    image: "docker-dev/deegree3-test-k8s:0.2.5"
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080 
    volumeMounts:
    - mountPath: /var/lib/tomcat/.deegree
      name: deegree3-volume
    lifecycle:
      postStart:
        exec:
          command: ['/bin/sh', '-c', 'sed -i "s/DB_USER/$DB_USER/" /var/lib/tomcat/.deegree/deegree_workspace_inspire/jdbc/geodaten_zentral.xml; sed -i "s/DB_PASSWORD/$DB_PASSWORD/" /var/lib/tomcat/.deegree/deegree_workspace_inspire/jdbc/geodaten_zentral.xml; cp /var/lib/tomcat/.deegree/config/rewrite.config /tmp/deegree-webservices/WEB-INF/rewrite.config; cp /var/lib/tomcat/.deegree/config/context.xml /tmp/deegree-webservices/META-INF/context.xml; cd /tmp; jar -cvf deegree-webservices.war -C de [...]
  volumes:
  - name: deegree3-volume
    emptyDir: {}
