kubernetes/deegree3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: deegree3-service
  labels:
    app: deegree3
spec:
  selector:
    app: deegree3
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
