kubernetes/deegree3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deegree3-ingress
  labels:
    app: deegree3
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /deegree-webservices
        pathType: Prefix
        backend:
          service:
            name: deegree3-service
            port:
              number: 8080
